--- a/templates/history/orders.html
+++ b/templates/history/orders.html
@@ -56,7 +56,8 @@
 			<thead>
 				<th>Date réception</th>
 				<th>Equipe</th>
-				<th>Utilisateur</th>
+				<th>Commandé par</th>
+				<th>Réceptionné par</th>
 				<th>Fournisseur</th>
 				<th>N°cmde</th>
 				<th>Désignation</th>
@@ -75,6 +76,7 @@
 							<td>{{ history.date_delivered|date }}</td>
 							<td>{{ history.team }}</td>
 							<td>{{ item.get_fullname }}</td>
+							<td>{{ item.get_fullname_recept|default="" }}</td>
 							<td>{{ history.provider }}{% if item.origin %} - {{ item.origin }}{% endif %}</td>
 							<td>{{ history.number|default:"" }}</td>
 							<td>{{ item.name }}</td>
