--- a/templates/new_base.html
+++ b/templates/new_base.html
@@ -50,7 +50,7 @@
         
 				<li class="{% block tab_orders %}{% endblock %}">
 					{% if user|has_perm:"order.custom_view_local_provider" %}
-	          <a href="{% url tab_reception %}">Commandes</a>
+	          <a href="{% url tab_reception_local_provider %}">Commandes</a>
 					{% else %}
 	          <a href="{% url tab_orders %}">Commandes</a>
 					{% endif %}	
@@ -67,7 +67,7 @@
         <li class="{% block tab_preferences %}{% endblock %}">
           <a href="{% url preferences %}">Préférences</a>
         </li>
-        {% if user|has_perm:"team.custom_view_teams" or user|has_perm:"team.custom_activate_account" or user|has_perm:"team.custom_add_group" %}
+        {% if user|is_admin or user|has_perm:"team.custom_view_teams" or user|has_perm:"team.custom_activate_account" %}
           <li class="{% block tab_admin %}{% endblock %}">
             <a href="{% url team_index %}">Admin</a>
           </li>
