can now disjoin items in an order

--- a/templates/order/_dialogs.html
+++ b/templates/order/_dialogs.html
@@ -9,6 +9,10 @@
   puis la commande sera transmise au secrétariat.
 </div>
 
+<div id="confirmDisjoin" class="dialog" title="Confirmation requise">
+	Êtes-vous sûr de disjoindre cet item de cette commande ?
+</div>
+
 <div id="confirmDelCart" class="dialog" title="Confirmation requise">
   Êtes-vous sûr de vouloir retirer cet article ?
 </div>
