--- a/templates/order/_order_detail.html
+++ b/templates/order/_order_detail.html
@@ -234,11 +234,15 @@
 		<a href="{% url order_delete order.id %}" class="trash confirmDel">Supprimer la commande</a>
 	{% endif %}
 	{% if user|has_perm:"order.custom_goto_status_3" %}
-		<a href="{% url set_next_status order.id %}" class="next-status save-changes"><b>Pour saisie</b></a>
+		<a href="{% url set_next_status order.id %}?page={{next_page|default:"1"}}" class="next-status save-changes"><b>Pour saisie</b></a>
 	{% endif %}
 {% else %}{% if order.status > 2 %}
 	{% if user|has_perm:"order.custom_goto_status_4" %}
+		{% if order.status == 3 %}
 		<a href="{% url set_next_status order.id %}" class="disk save-changes">Enregistrer les modifications</a>
+		{% else %}
+		<a href="{{ order.get_absolute_url }}?page={{next_page|default:"1"}}" class="disk save-changes">Enregistrer les modifications</a>
+		{% endif %}
 		<a href="{% url order_delete order.id %}" class="trash confirmDel">Supprimer la commande</a>
 	{% endif %}
 {% endif %}{% endif %}{% endif %}{% endif %}
