--- a/templates/admin/group_item.html
+++ b/templates/admin/group_item.html
@@ -60,6 +60,8 @@
 						{{ form.custom_history_budget }}{{ form.custom_history_budget.label }}
 					</td>
 					<td>
+						{{ form.custom_is_admin }}{{ form.custom_is_admin.label }}
+						<div class="cleaner"></div>
 						{{ form.custom_add_team }}{{ form.custom_add_team.label }}
 						<div class="cleaner"></div>
 						{{ form.custom_view_teams }}{{ form.custom_view_teams.label }}
