--- a/templates/budgetlines/index.html
+++ b/templates/budgetlines/index.html
@@ -23,6 +23,11 @@
 			<img src="{{ MEDIA_URL }}img/icons/magnifier.png" />Détail de tous les budgets
 		</a>
 	</div>
+	<div class="btn_wrapper">
+		<a href="{% url budgetline_export %}" class="btn_big">
+			<img src="{{ MEDIA_URL }}img/icons/page_excel.png" />Exporter vers Excel
+		</a>
+	</div>
 	<h1>Gestion des budgets</h1>
 {% endblock %}
 
