--- a/templates/base_admin.html
+++ b/templates/base_admin.html
@@ -8,9 +8,12 @@
 	<li class="{% block menu_team %}{% endblock %}">
 		<a href="{% url team_index %}">Equipes</a>
 	</li>
-	{% if user|has_perm:"team.custom_add_group" %}
+	{% if user|is_admin %}
 	<li class="{% block menu_group %}{% endblock %}">
 		<a href="{% url group_index %}">Groupes d'utilisateur</a>
+	</li>
+	<li class="{% block menu_maintenance %}{% endblock %} last">
+		<a href="{% url maintenance %}">Maintenance</a>
 	</li>
 	{% endif %}
 </ul>
