added export to xls on history budgets page

--- a/templates/history/search_form_budgets.html
+++ b/templates/history/search_form_budgets.html
@@ -46,7 +46,7 @@
     <div class="cleaner"></div>
     
     <button type="submit" class="all">Chercher</button>
-    <a href="{% url budgetlines %}" class="refresh">Liste globale</a>
+    <a href="{% url history_budgets %}" class="refresh">Liste globale</a>
   </form>
 </div>
 <div class="cleaner"></div>
